fix welcome section padding on small screen size

--- a/src/components/welcome.css
+++ b/src/components/welcome.css
@@ -1,7 +1,7 @@
 #welcome-section {
   height: 100vh;
   min-height: 565px;
-  padding-top: 5%;
+  padding-top: 60px;
   padding-bottom: 5%;
   background: linear-gradient(to right, #284b63, #5e85a0);
   color: white;
